<?xml version="1.0"?>
<package>
  <name>rb1_description</name>
  <version>1.0.0</version>
  <description>The rb1_description package</description>

 
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  
  <author email="rguzman@robotnik.es">Roberto Guzmán</author>

  <license>BSD</license>


  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rb1_base_description</build_depend>
  <build_depend>rb1_torso_description</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rb1_base_description</run_depend>
  <run_depend>rb1_torso_description</run_depend>
  <run_depend>kinova_description</run_depend>
  <run_depend>kinova_driver</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>


  <export>

  </export>
</package>
